[project]
name = "nwdaf-storage"
version = "0.1.0"
description = "NWDAF Data Storage Service with flexible schema support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.121.3",
    "influxdb-client==1.49.0",
    "pydantic==2.12.4",
    "python-dotenv==1.2.1",
    "clickhouse-connect==0.7.19",
    "uvicorn==0.34.0",
    "confluent-kafka==2.12.2",
    "cryptography>=42.0.5",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
    "bandit==1.8.0",
    "safety==2.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
